[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = librarypaste
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A simple pastebin implemented in Python
long_description = file:README.rst
url = https://github.com/yougov/librarypaste
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only

[options]
packages = find:
include_package_data = true
python_requires = >=3.5
install_requires =
	pygments
	genshi
	cherrypy
	PyYAML
	requests
	jaraco.functools>=1.15
	more_itertools
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	pymongo>=3
	jaraco.mongodb

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	librarypaste = librarypaste.launch:main
pmxbot_handlers =
	librarypaste = librarypaste.pmxbot
